--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
   },
   "devDependencies": {
     "@types/color-convert": "^2.0.0",
-    "@types/cookie": "^0.5.1",
-    "daisyui": "^3.2.1"
+    "@types/cookie": "^0.5.1"
   }
 }
