--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "devDependencies": {
     "@types/color-convert": "^2.0.0",
-    "@types/cookie": "^0.5.1"
+    "@types/cookie": "^0.5.1",
+    "daisyui": "^4.12.10"
   }
 }
